Add info block to each file

--- a/unnamed-emoji.sty
+++ b/unnamed-emoji.sty
@@ -1,3 +1,7 @@
+% unnamed-emoji
+% https://github.com/gucci-on-fleek/unnamed-emoji
+% SPDX-License-Identifier: MPL-2.0+
+% SPDX-FileCopyrightText: 2023 Max Chernoff
 
 % Preliminaries
 \NeedsTeXFormat{LaTeX2e}
