--- a/unnamed-emoji.tex
+++ b/unnamed-emoji.tex
@@ -1,3 +1,8 @@
+% unnamed-emoji
+% https://github.com/gucci-on-fleek/unnamed-emoji
+% SPDX-License-Identifier: MPL-2.0+
+% SPDX-FileCopyrightText: 2023 Max Chernoff
+
 \wlog{unnamed-emoji v0.0.1} %%version
 
 \catcode`@=11
